// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-action-button Testing snapshots When isVisible="false" 1`] = `
<wpp-overlay is-visible="false">
  <mock:shadow-root>
    <div class="overlay overlay--hidden" style="z-index: 900;"></div>
  </mock:shadow-root>
</wpp-overlay>
`;

exports[`wpp-action-button Testing snapshots When isVisible="true" 1`] = `
<wpp-overlay is-visible="true">
  <mock:shadow-root>
    <div class="overlay overlay--visible" style="z-index: 900;"></div>
  </mock:shadow-root>
</wpp-overlay>
`;
